# patron

./: .dockerignore  .env.exmaple  .gitignore  CLAUDE.md  Dockerfile  INIT_PLAN.md  LICENSE  README.md  docker-compose.yml  marketing_descriptions.md  pyproject.toml  setup.cfg
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: ci.yml  coding-workflow.lock.yml  coding-workflow.md  daily-repo-status.lock.yml  daily-repo-status.md  issue-clarifier.yml
agents/patron_itself/: patron_agent.py
docs/: marketing_descriptions.md  payments.md
rnd/: regular_patron_datasets.ipynb
scripts/: list_sessions.py
src/: bot.py  dependencies.py  task_scheduler.py
src/agents/patron_itself/: middleware.py  patron_agent.py
src/agents/patron_itself/prompts/: subscription_reminder.md  system_prompt.md  timezone_known.md  timezone_unknown.md
src/agents/patron_itself/repositories/: memories_repository.py  tasks_repository.py  transactions_repository.py  users_repository.py
src/agents/patron_itself/tools/: admin_tools.py  memory_tools.py  task_tools.py  user_tools.py  web_tools.py
src/services/vectorisation/: VectorizerGemini.py
src/services/vectorisation/vectorizer_gemini/: task_types.py
src/tests/: conftest.py  test_bot.py
src/tests/agent/: test_build_system_prompt.py  test_memory_tools.py  test_patron_agent.py  test_task_tools.py  test_user_tools.py
src/tests/evaluations/agent/: correctness.py
src/tests/repositories/: test_memories_repository.py  test_tasks_repository.py  test_transactions_repository.py  test_users_repository.py
tests/agent/: test_patron_agent.py
